减少右边目录的间距，好看一些

--- a/src/components/SidebarRight/sidebar.css
+++ b/src/components/SidebarRight/sidebar.css
@@ -15,7 +15,7 @@
     display: block;
     color: #bbb;
     transition: all 0.2s;
-    margin: 0.8em 0;
+    /*margin: 0.8em 0;*/
     font-weight: lighter;
     line-height: 2em;
     padding-right: 1.8em;
