新增插件，以及对table的解析

--- a/src/styles/markdown.scss
+++ b/src/styles/markdown.scss
@@ -13,6 +13,13 @@
     overflow: auto;
   }
 
+  img {
+    background: cornsilk;
+  }
+  .mermaid {
+    background: cornsilk;
+  }
+
   blockquote {
     @extend .blockquote;
 
